--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -18,7 +18,7 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
- 
+ <!--JAVAEE API  -->
   <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 <dependency>
     <groupId>javax</groupId>
@@ -33,6 +33,12 @@
     <artifactId>spring-webmvc</artifactId>
     <version>${spring.version}</version>
 </dependency>
+<!-- add backand project  -->
+<dependency>
+    <groupId>net.kzn</groupId>
+    <artifactId>shoppingbackend</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+</dependency>
   
     <dependency>
       <groupId>junit</groupId>
@@ -40,6 +46,7 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
   <build>
     <plugins>
