--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -33,6 +33,13 @@
     <artifactId>spring-webmvc</artifactId>
     <version>${spring.version}</version>
 </dependency>
+<!-- spring Context for Repository -->
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-context</artifactId>
+	<version>${spring.version}</version>
+</dependency>
+
 <!-- add backand project  -->
 <dependency>
     <groupId>net.kzn</groupId>
