--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javaee.version>7.0</javaee.version>
+    <spring.version>4.3.6.RELEASE</spring.version>
   </properties>
 
   <dependencies>
@@ -22,6 +23,14 @@
     <artifactId>javaee-api</artifactId>
     <version>${javaee.version}</version>
     <scope>provided</scope>
+</dependency>
+
+
+<!-- spring Context for Repository -->
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-context</artifactId>
+	<version>${spring.version}</version>
 </dependency>
     <dependency>
       <groupId>junit</groupId>
