--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javaee.version>7.0</javaee.version>
     <spring.version>4.3.6.RELEASE</spring.version>
+     <hibernate.version>5.2.7.Final</hibernate.version>
   </properties>
 
   <dependencies>
@@ -32,6 +33,42 @@
 	<artifactId>spring-context</artifactId>
 	<version>${spring.version}</version>
 </dependency>
+
+<!-- h2 database -->
+<dependency>
+	<groupId>com.h2database</groupId>
+	<artifactId>h2</artifactId>
+	<scope>runtime</scope>
+	<version>1.4.193</version>
+</dependency>
+
+<!-- hibernate  database -->
+<dependency>
+	<groupId>org.hibernate</groupId>
+	<artifactId>hibernate-core</artifactId>
+	<version>${hibernate.version}</version>
+</dependency>
+<!-- SPRING ORM DEPENDENCIES -->
+<!-- YE HELP KRTA HAI SECONDAY TASK KO PERFORM KRNE KA LIYE -->
+<!-- 1.DATASOUCRCE MANAGEMENT -->
+<!-- 2.TRANSECTION MANAGEMENT -->
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-orm</artifactId>
+	<version>${spring.version}</version>
+</dependency>
+
+<!-- DATABASE CONNECTION POOLING -->
+<!-- DATABASE CONNECTION POOLING KO MANGE KRNE K LIYE CODING NHI KRENGE ONLY ENTRY KRENGE -->
+<!-- 1.COMMONS-DPCP2 YE EK CLASSS HAI JO HME HELP KRTA DTAABACE CONNECTION POOLING KO MANAGE RNE KA KAM KRTI HAI -->
+<!-- 2.TRANSECTION MANAGEMENT -->
+<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-dbcp2</artifactId>
+	<version>2.1.1</version>
+</dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
