--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -68,11 +68,11 @@
 	<version>2.1.1</version>
 </dependency>
 
-
+<!--write test case in junit  -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
